# my-tasklist

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CONFIG.md  BACKEND_LOGS.md  CHINESE_AI_GUIDE.md  CLAUDE.md  DEBUG_FORTUNE.md  DOCKER_DEPLOY.md  DOCKER_MIGRATION.md  DOCKER_README.md  Dockerfile.backend  Dockerfile.frontend  FORTUNE_GUIDE.md  GEMINI_LOGS.md  LOG_LOCATION.md  LOG_OUTPUT_FIXED.md  MIGRATION_PLAN.md  MONITORING.md  NO_LOGS_FIX.md  OPTIMIZATION.md  PROJECT_STRUCTURE.md  QUICK_FIX.md  README.md  TECH_STACK.md  TIMEOUT_FIXED.md  clear_fortune_records.sh  database.sql  diagnose.sh  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  monitor.sh  nginx.conf  start.sh  stop.sh  wrangler.jsonc  迁移计划.md
backend/: ai_client.py  ai_logger.py  app.py  auth_utils.py  config.py  create_db.py  crypto_utils.py  database.py  entrypoint.sh  eslint.config.js  gunicorn.conf.py  logger_config.py  models.py  package-lock.json  package.json  production_config.py  pyproject.toml  requirements.txt  schemas.py  wrangler.jsonc
backend/container/: server.ts  tsconfig.json
backend/drizzle/: 0000_initial.sql  0002_last_login_at.sql  0003_token_invalid_before.sql  0004_fortune_images.sql  0005_fortune_index.sql  0006_finance.sql  0007_simplify_loans.sql  0008_fortune_image_status.sql
backend/routes/: auth_routes.py  bmi_routes.py  countdown_routes.py  fortune_routes.py  menu_routes.py  secure_note_routes.py  task_routes.py
backend/scripts/: import-to-d1.ts
backend/src/: index.ts  types.ts
backend/src/lib/: ai.ts  (+2 more)
backend/workers-backend/: package-lock.json
(+108 files in other folders)
